# r3m

./: .dockerignore  .gitignore  CMakeLists.txt  DEPLOYMENT.md  LICENSE  Makefile  README.md  fly.toml  setup-fly.sh  test_vocab.txt
.github/workflows/: deploy-cpp-cloudflare.yml  deploy-huggingface.yml  deploy.yml  docker-build.yml
configs/dev/: config.yaml
configs/prod/: config.yaml
data/: good_doc1.txt  good_doc2.txt  high_quality_doc.txt  low_quality_doc.txt  mediocre_doc.txt  technical_doc.txt  test_document.conf  test_document.csv  test_document.html  test_document.json  test_document.md  test_document.mdx  test_document.tsv  test_document.txt  test_document.xml  test_document.yaml  test_document.yml  test_document_complex.html  test_results.txt
deploy/r3m-cloudflare/: .gitignore  README.md  package.json  wrangler.jsonc
deploy/r3m-cloudflare/src/: index.js
deploy/r3m-huggingface/: .dockerignore  Dockerfile  README.md  SETUP.md  config.yaml  start.sh  test-port.sh  upload-essential.sh
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docker/monitoring/: prometheus.yml
examples/: direct_library_usage.cpp
include/r3m/api/config/: config.hpp
include/r3m/api/jobs/: job_manager.hpp
include/r3m/api/routes/: routes.hpp
include/r3m/api/routes/json_utils/: json_utils.hpp
include/r3m/api/routes/response_handler/: response_handler.hpp
include/r3m/api/routes/route_handlers/: route_handlers.hpp
include/r3m/api/routes/serialization/: serializer.hpp
include/r3m/chunking/: advanced_chunker.hpp  advanced_tokenizer.hpp  chunk_models.hpp  contextual_rag.hpp  metadata_processor.hpp  multipass_chunker.hpp  sentence_chunker.hpp  tokenizer.hpp
include/r3m/chunking/quality_assessment/: quality_calculator.hpp
include/r3m/chunking/section_processing/: section_processor.hpp
include/r3m/chunking/token_management/: token_cache.hpp
include/r3m/core/: config_manager.hpp  document_processor.hpp  engine.hpp  library.hpp  pipeline_orchestrator.hpp
include/r3m/formats/: processor.hpp
include/r3m/parallel/: optimized_thread_pool.hpp  thread_pool.hpp
include/r3m/processing/: pipeline.hpp
include/r3m/quality/: assessor.hpp
include/r3m/server/: http_server.hpp
include/r3m/utils/: performance.hpp  simd_utils.hpp  text_processing.hpp  text_utils.hpp
scripts/: clean_test_data.sh  performance_loadtest.py
src/: main.cpp
src/api/config/: config.cpp
src/api/jobs/: job_manager.cpp
src/api/routes/: routes.cpp
src/api/routes/json_utils/: json_utils.cpp
src/api/routes/response_handler/: response_handler.cpp
src/api/routes/route_handlers/: route_handlers.cpp
src/api/routes/serialization/: serializer.cpp
src/chunking/: advanced_chunker.cpp  advanced_tokenizer.cpp  contextual_rag.cpp  metadata_processor.cpp  multipass_chunker.cpp  sentence_chunker.cpp  tokenizer.cpp
src/chunking/quality_assessment/: quality_calculator.cpp
src/chunking/section_processing/: section_processor.cpp
src/chunking/token_management/: token_cache.cpp
src/core/: config_manager.cpp  document_processor.cpp  library.cpp
src/formats/: processor.cpp
src/parallel/: optimized_thread_pool.cpp  thread_pool.cpp
src/processing/: pipeline.cpp
src/quality/: assessor.cpp
src/server/: http_server.cpp
src/utils/: performance.cpp  simd_utils.cpp  text_processing.cpp  text_utils.cpp
tests/: test_advanced_chunking.cpp  test_advanced_chunking_enhanced.cpp  test_advanced_compatibility.cpp  test_advanced_features.cpp  test_api_endpoints.py  test_api_performance.py  test_chunking_basic.cpp  test_chunking_comprehensive.cpp  test_comprehensive.cpp  test_document_processor_integration.cpp  test_document_size_benchmark.cpp  test_http_server.cpp  test_large_document_chunking.cpp  test_output_to_data.cpp  test_parallel.cpp  test_parallel_optimization.cpp  test_performance_benchmarking.cpp  test_simd_optimizations.cpp
